// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SMS Params & body presence With testMode=false and devKey="hey" getBulkCost() 1`] = `
Object {
  "headers": Object {
    "Content-length": 111,
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "POST",
  "path": "/api/msg_cost_bulk",
}
`;

exports[`SMS Params & body presence With testMode=false and devKey="hey" getCost() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/msg_cost?devkey=hey&apikey=test&test=false&user=test&recipients=test%2Ctest&message=test",
}
`;

exports[`SMS Params & body presence With testMode=false and devKey="hey" getList() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/msg_list?devkey=hey&apikey=test&test=false&user=test&messages_id=test&date_from=2020-02-01&date_to=2020-02-01",
}
`;

exports[`SMS Params & body presence With testMode=false and devKey="hey" getStatus() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/msg_status?devkey=hey&apikey=test&test=false&user=test&messages_id=test%2Ctest1",
}
`;

exports[`SMS Params & body presence With testMode=false and devKey="hey" sendBulkSMS() 1`] = `
Object {
  "headers": Object {
    "Content-length": 116,
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "POST",
  "path": "/api/msg_send_bulk",
}
`;

exports[`SMS Params & body presence With testMode=false and devKey="hey" sendSMS() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/msg_send?devkey=hey&apikey=test&test=false&user=test&message=test&recipients=test&sender=me",
}
`;

exports[`SMS Params & body presence With testMode=true and devKey="" getBulkCost() 1`] = `
Object {
  "headers": Object {
    "Content-length": 107,
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "POST",
  "path": "/api/msg_cost_bulk",
}
`;

exports[`SMS Params & body presence With testMode=true and devKey="" getCost() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/msg_cost?devkey=&apikey=test&test=true&user=test&recipients=test%2Ctest&message=test",
}
`;

exports[`SMS Params & body presence With testMode=true and devKey="" getList() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/msg_list?devkey=&apikey=test&test=true&user=test&messages_id=test&date_from=2020-02-01&date_to=2020-02-01",
}
`;

exports[`SMS Params & body presence With testMode=true and devKey="" getStatus() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/msg_status?devkey=&apikey=test&test=true&user=test&messages_id=test%2Ctest1",
}
`;

exports[`SMS Params & body presence With testMode=true and devKey="" sendBulkSMS() 1`] = `
Object {
  "headers": Object {
    "Content-length": 112,
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "POST",
  "path": "/api/msg_send_bulk",
}
`;

exports[`SMS Params & body presence With testMode=true and devKey="" sendSMS() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/msg_send?devkey=&apikey=test&test=true&user=test&message=test&recipients=test&sender=me",
}
`;
